<resources>
    <string name="app_name">MovieApp</string>
    <string name="et_user_mail">User Mail</string>
    <string name="et_password">Password</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="btn_have_acc">Have Acc</string>
    <string name="btn_register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="signing_in">Signing In</string>
    <string name="sign_up">Sign Up</string>

    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="search_movies">Search Movies . . .</string>


    <string-array name="tabName">
        <item name="popular">Popular</item>
        <item name="now_playing">Now Playing</item>
        <item name="top_rated">Top Rated</item>
        <item name="upcoming">Upcoming</item>
    </string-array>

    <string name="genre_list_placeholder">%s</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error">ERROR</string>
    <string name="movie_name_holder">MovieName</string>
    <string name="categories_holder">Categories</string>
    <string name="sign_out">Sign Out</string>
    <string name="favorites">Favorites</string>
</resources>